--- a/criminal_def_new_v2_2/css/style.css
+++ b/criminal_def_new_v2_2/css/style.css
@@ -843,6 +843,8 @@ text-transform: uppercase;
     float: right;
     margin-bottom: -95px;
     margin-top: 60px;
+    z-index: 99;
+    position: relative;
   }
 
   .page_contacts .link{
